# atcoder-bot-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yaml  kill.yaml  run.yaml
src/: commands.rs  daily_job.rs  difficulty.rs  main.rs  notify.rs
src/api_parsing/: difficulty.rs  mod.rs  types.rs
src/functions/: commands.rs  mod.rs  periodic.rs
src/functions/periodic/: check_upcomings.rs  list_submission.rs  mod.rs  wait.rs
