[package]
edition = "2024"
name = "atcoder-bot-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
dotenvy = "0.15.7"
itertools = "0.14.0"
poise = {git = "https://github.com/serenity-rs/poise.git"}
reqwest = {version = "0.12.15", features = ["json", "blocking", "gzip"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["rt-multi-thread"]}
